--- a/project_fake.ipynb
+++ b/project_fake.ipynb
@@ -883,7 +883,7 @@
     "connection= cn.connect(\n",
     "                      host='localhost',\n",
     "                      user='root',\n",
-    "                      password='schrodinger')#database='library'"
+    "                      password='enter your password')#database='library'"
    ]
   },
   {
